[gd_scene load_steps=5 format=3 uid="uid://x1lh0re4n6wg"]

[ext_resource type="Script" path="res://code/GUI/indicators/indicator_bar.gd" id="1_qgvuk"]
[ext_resource type="Script" path="res://code/GUI/indicators/whole_range.gd" id="2_akgk5"]
[ext_resource type="PackedScene" uid="uid://bixuvnj0ukhsj" path="res://code/code_resources/buttons/button_sound.tscn" id="2_qwyys"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_76scr"]

[node name="IndicatorBar" type="PanelContainer"]
custom_minimum_size = Vector2(160, 40)
offset_right = 171.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_76scr")
script = ExtResource("1_qgvuk")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(122, 12)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="WholeRange" type="Control" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_akgk5")

[node name="Indicator" type="ColorRect" parent="Background/WholeRange"]
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -12.0
offset_right = 2.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Indicator name"

[node name="Increase" parent="." instance=ExtResource("2_qwyys")]
custom_minimum_size = Vector2(20, 10)
layout_mode = 2
size_flags_horizontal = 8
text = "+"

[node name="Decrease" parent="." instance=ExtResource("2_qwyys")]
custom_minimum_size = Vector2(20, 10)
layout_mode = 2
size_flags_horizontal = 0
text = "-
"

[node name="CooldownProgress" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(116.615, 0)
layout_mode = 2
size_flags_horizontal = 4
show_percentage = false

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="Duration" type="Timer" parent="."]
one_shot = true

[connection signal="button_down" from="Increase" to="." method="_on_increase_button_down"]
[connection signal="button_down" from="Decrease" to="." method="_on_decrease_button_down"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
